--- a/Project/Simple.storyboard
+++ b/Project/Simple.storyboard
@@ -218,10 +218,21 @@
                                             <action selector="rematchTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="G8Y-4S-dMN"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LUo-ff-0qQ">
+                                        <rect key="frame" x="126.5" y="392" width="47" height="35"/>
+                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="19"/>
+                                        <state key="normal" title="Quit!">
+                                            <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="quitMatchInTurnTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1vp-ww-MIQ"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstItem="5ee-el-4Q0" firstAttribute="top" secondItem="625-Os-Jkr" secondAttribute="top" id="0Kq-Dh-coe"/>
+                                    <constraint firstItem="LUo-ff-0qQ" firstAttribute="top" secondItem="vDF-Rc-GM1" secondAttribute="bottom" constant="3" id="0UI-CF-ewU"/>
                                     <constraint firstItem="kpz-hh-KBB" firstAttribute="width" secondItem="qGg-OV-G9T" secondAttribute="width" multiplier="3:2" id="0ao-z3-ncL"/>
                                     <constraint firstItem="Tgq-dh-ToL" firstAttribute="width" secondItem="cMv-f3-4fT" secondAttribute="width" multiplier="3:2" id="0uD-ER-TS2"/>
                                     <constraint firstItem="xPe-iS-FRY" firstAttribute="leading" secondItem="NnT-Ds-qyC" secondAttribute="trailing" constant="8" id="0ws-u4-3re"/>
@@ -246,6 +257,7 @@
                                     <constraint firstItem="7eX-kc-a9s" firstAttribute="width" secondItem="nFa-SY-r29" secondAttribute="width" id="IUa-cX-wmf"/>
                                     <constraint firstItem="IgV-q0-QEz" firstAttribute="top" secondItem="3l6-Sc-irt" secondAttribute="bottom" constant="7" id="Is9-Zg-NiI"/>
                                     <constraint firstItem="rwc-EA-9cJ" firstAttribute="height" secondItem="nFa-SY-r29" secondAttribute="height" id="LW5-eI-iAU"/>
+                                    <constraint firstItem="LUo-ff-0qQ" firstAttribute="centerX" secondItem="625-Os-Jkr" secondAttribute="centerX" id="Mnt-pj-Rgs"/>
                                     <constraint firstItem="IgV-q0-QEz" firstAttribute="height" secondItem="nFa-SY-r29" secondAttribute="height" id="NOo-oO-cbr"/>
                                     <constraint firstItem="rwc-EA-9cJ" firstAttribute="centerY" secondItem="nFa-SY-r29" secondAttribute="centerY" id="PFI-ta-YID"/>
                                     <constraint firstItem="3l6-Sc-irt" firstAttribute="height" secondItem="nFa-SY-r29" secondAttribute="height" id="R1u-2Q-jTv"/>
@@ -336,6 +348,7 @@
                         <outlet property="matchState" destination="5ee-el-4Q0" id="eae-Ad-ePS"/>
                         <outlet property="opponentOutcome" destination="Lib-xT-SCI" id="nwA-Nb-X7X"/>
                         <outlet property="opponentStatus" destination="xPe-iS-FRY" id="N34-uB-IB4"/>
+                        <outlet property="quitInTurn" destination="LUo-ff-0qQ" id="TXw-Cc-upy"/>
                         <outlet property="rematch" destination="fP3-4N-hPj" id="7yL-ff-yVI"/>
                         <outlet property="sendReminder" destination="3l6-Sc-irt" id="UlI-CF-7ek"/>
                         <outlet property="updateMatch" destination="nFa-SY-r29" id="Vy8-rL-DBn"/>
