Now showing completed exchanges

--- a/Project/Simple.storyboard
+++ b/Project/Simple.storyboard
@@ -243,7 +243,7 @@
                                             <action selector="quitMatchInTurnTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1vp-ww-MIQ"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0 active / 7 total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="38K-ZP-UVg" userLabel="Exchange History">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 active / 7 completed / 9 total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="38K-ZP-UVg" userLabel="Exchange History">
                                         <rect key="frame" x="140" y="119" width="160" height="12"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                         <nil key="textColor"/>
